queXF 1.16.0 - Changes since 1.15.0

*New Feature: Verification - replaced GET to submit with POST and autofocus to assign button for faster form submission
*New Feature: Allow for images from scanned forms to be stored as files instead of in the database
*New Feature: Don't save NULL/empty values in database to save space

*Fixed Bug: Form templates listed in ascending order so newer forms harder to access - reversed
*Fixed Bug: Long text fields not verifying
*Fixed Bug: Database structure inefficent 

*Filesystem changes required:

Create a new directory called "images" that the web server process has write access to

*Database changes required:

ALTER TABLE `boxes` CHANGE `bid` `bid` INT UNSIGNED NOT NULL AUTO_INCREMENT ,
CHANGE `pid` `pid` INT UNSIGNED NOT NULL ,
CHANGE `bgid` `bgid` INT UNSIGNED NOT NULL;

ALTER TABLE `boxgroupstype` CHANGE `bgid` `bgid` INT UNSIGNED NOT NULL AUTO_INCREMENT ,
CHANGE `btid` `btid` TINYINT UNSIGNED NOT NULL ,
CHANGE `width` `width` INT UNSIGNED NOT NULL ,
CHANGE `pid` `pid` INT UNSIGNED NOT NULL ,
CHANGE `sid` `sid` INT UNSIGNED NULL DEFAULT NULL ;

ALTER TABLE `boxgrouptypes` CHANGE `btid` `btid` TINYINT UNSIGNED NOT NULL ;

ALTER TABLE `clientquestionnaire` CHANGE `cid` `cid` INT UNSIGNED NOT NULL ,
CHANGE `qid` `qid` INT UNSIGNED NOT NULL ;

ALTER TABLE `clients` CHANGE `cid` `cid` INT UNSIGNED NOT NULL AUTO_INCREMENT ;

ALTER TABLE `formboxes` CHANGE `bid` `bid` INT UNSIGNED NOT NULL ,
CHANGE `fid` `fid` INT UNSIGNED NOT NULL ,
CHANGE `filled` `filled` FLOAT NOT NULL ;

DELETE FROM `formboxverifychar` WHERE val IS NULL or val = ' ' or val = '';

DELETE FROM `formboxverifytext` WHERE val IS NULL or val = ' ' or val = '';

ALTER TABLE `formboxverifychar` CHANGE `vid` `vid` SMALLINT UNSIGNED NOT NULL ,
CHANGE `bid` `bid` INT UNSIGNED NOT NULL ,
CHANGE `fid` `fid` INT UNSIGNED NOT NULL;

ALTER TABLE `formboxverifychar` DROP PRIMARY KEY;
